# project-lumi

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  MVP_REPORT.md  README.md  RELEASE.md  TODO.md  config.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml  nightly-smoke.yml
app/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
app/src/: App.tsx  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs
app/src/components/: ChatPanel.tsx  CompactOverlay.tsx  LumiAvatar.tsx  LumiControls.tsx  LumiLayout.tsx  SettingsPanel.tsx  SettingsTabs.tsx  SetupPanel.tsx
app/src/ipc/: client.test.ts  client.ts  eventNames.ts  events.ts  mockClient.ts
app/src/lib/: tauriCompat.ts
app/src/roots/: ChatRoot.tsx  OverlayRoot.tsx  SettingsRoot.tsx
app/src/state/: useBrainSocket.ts  useLumiState.test.ts  useLumiState.ts
app/src/styles/: tokens.ts
design_handoff_lumi/: Lumi Design.html  README.md  lumi-components.jsx  lumi-surfaces.jsx
docs/: lora_api_probe.md  phase9_scope.md
docs/CODEMAPS/: INDEX.md  training_pipeline.md
eval_results/: baseline_v0.json
models/: hey_lumi.onnx  hey_lumi.onnx.data
results/: eval_base_phi35.json  eval_lumi_v1.json
scripts/: brain.spec  build_brain.sh  check_config_schema.py  doctor.py  eval_kv_quant.py  eval_persona.py  ingest_docs.py  measure_base_latency.py  measure_rag_latency.py  measure_streaming_latency.py  merge_and_quantize.py  run_lumi.sh  setup_wizard.py  smoke_live.py  smoke_test_voice.py  synth_dataset.py  train_lumi.py
src/: __init__.py  main.py  utils.py
src/audio/: __init__.py  ears.py  hotkey.py  mouth.py  scribe.py  speaker.py  viseme_map.py
src/core/: __init__.py  config.py  config_runtime.py  config_schema.py  config_writer.py  event_bridge.py  events.py  handshake.py  ipc_transport.py  logging_config.py  metrics.py  orchestrator.py  startup_check.py  state_machine.py  ws_transport.py  zmq_server.py
src/ipc/: ws_bridge.py
src/llm/: __init__.py  domain_router.py  inference_dispatcher.py  memory.py  model_loader.py  model_registry.py  prompt_engine.py  reasoning_router.py  reflex_router.py  tool_call_parser.py
src/rag/: __init__.py  chunker.py  embedder.py  errors.py  fusion.py  loader.py  retriever.py  schema.sql  store.py
src/tools/: __init__.py  base.py  datetime_tool.py  executor.py  os_actions.py  rag_ingest.py  registry.py  timer_tool.py  vision.py  web_search.py
tests/: conftest.py  test_datetime_tool.py  test_domain_router.py  test_e2e_smoke.py  test_ears.py  test_ears_recovery.py  test_eval_persona.py  test_events.py  test_hotkey.py  test_inference_timeout.py  test_ipc_handshake.py  test_ipc_protocol_conformance.py  test_ipc_transport.py  test_kokoro_phoneme_discovery.py  test_logging_config.py  test_memory.py  test_metrics.py  test_model_loader.py  test_model_quality.py  test_model_registry.py  test_mouth.py  test_mouth_visemes.py  test_orchestrator.py  test_orchestrator_audio_wiring.py  test_orchestrator_rag.py  test_orchestrator_recovery.py  test_orchestrator_tools.py  test_os_actions.py  test_prompt_engine.py  test_prompt_engine_rag.py  test_rag_chunker.py  test_rag_config.py  test_rag_embedder.py  test_rag_fusion.py  test_rag_ingest_script.py  test_rag_intent.py  test_rag_loader.py  test_rag_retriever.py  test_rag_store.py  test_reasoning_router.py  (+24 more)
tests/core/: test_config_runtime.py  test_config_writer.py  test_event_bridge_config.py  test_event_bridge_outbound_coverage.py  test_hotreload_observers.py  test_orchestrator_reconfigure.py  test_rag_status_wiring.py
tests/integration/: __init__.py  fake_godot_client.py  fake_tcp_client.py  fake_ws_client.py  test_brain_e2e.py  test_ipc_full_turn.py
tests/ipc/: test_ws_bridge.py
ui/: README.md  SUPERSEDED.md  TESTING.md  project.godot
ui/assets/sprites/: SPRITE_SPEC.md
ui/scenes/: avatar.tscn  chat_panel.tscn  citation_panel.tscn  main.tscn  rag_toggle.tscn  setting_row.tscn  settings_panel.tscn  text_bubble.tscn
ui/scripts/: avatar_controller.gd  chat_panel.gd  citation_panel.gd  ipc_protocol.gd  lumi_client.gd  main.gd  rag_toggle.gd  setting_row.gd  settings_panel.gd  text_bubble.gd
ui/themes/: design_tokens.json  lumi_dark.tres
