[project]
name = "lumi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "acoustics>=0.2.6",
    "ai-edge-litert>=2.1.2",
    "audiomentations>=0.43.1",
    "colorama>=0.4.6",
    "datasets>=4.5.0",
    "deep-phonemizer>=0.0.19",
    "faster-whisper>=1.2.1",
    "jupyter>=1.1.1",
    "mutagen>=1.47.0",
    "numpy>=2.4.2",
    "onnx>=1.20.1",
    "onnx-graphsurgeon>=0.5.8",
    "onnx2tf>=1.28.8",
    "onnxruntime>=1.24.1",
    "onnxscript>=0.6.2",
    "onnxsim>=0.4.36",
    "openwakeword>=0.4.0",
    "pip>=26.0.1",
    "piper-phonemize-cross>=1.2.1",
    "piper-tts>=1.4.1",
    "pronouncing>=0.2.0",
    "scipy>=1.17.0",
    "setuptools<70",
    "sng4onnx>=2.0.0",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "speechbrain>=0.5.16",
    "torch>=2.10.0",
    "torch-audiomentations>=0.12.0",
    "torchaudio>=2.10.0",
    "torchcodec>=0.10.0",
    "torchinfo>=1.8.0",
    "torchmetrics>=1.8.2",
    "webrtcvad>=2.0.10",
]
