[package]
name = "lumi"
version = "0.1.0"
description = "Lumi — local AI desktop assistant"
authors = ["Lumi"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "lumi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.1", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
